--- a/GUI/Design.ui
+++ b/GUI/Design.ui
@@ -1283,7 +1283,7 @@ R, M Angle (rad):</string>
             <item row="0" column="0">
              <widget class="QTabWidget" name="tabWidget_5">
               <property name="currentIndex">
-               <number>1</number>
+               <number>2</number>
               </property>
               <property name="tabBarAutoHide">
                <bool>true</bool>
@@ -1638,7 +1638,7 @@ R, M Angle (rad):</string>
                    <bool>false</bool>
                   </property>
                   <property name="text">
-                   <string>np.sqrt(2)*self.image_loader.mode</string>
+                   <string>self.image_loader.mode</string>
                   </property>
                  </widget>
                 </item>
@@ -2838,24 +2838,24 @@ Jones Vector (note i is 1j).:</string>
  <resources/>
  <connections/>
  <buttongroups>
-  <buttongroup name="buttonGroup_5"/>
-  <buttongroup name="buttonGroup_10"/>
-  <buttongroup name="buttonGroup_12"/>
-  <buttongroup name="buttonGroup_6"/>
-  <buttongroup name="buttonGroup_16"/>
-  <buttongroup name="buttonGroup_8"/>
-  <buttongroup name="buttonGroup_11"/>
-  <buttongroup name="buttonGroup_7"/>
-  <buttongroup name="buttonGroup_17"/>
-  <buttongroup name="buttonGroup_14"/>
-  <buttongroup name="buttonGroup_3"/>
-  <buttongroup name="buttonGroup_4"/>
-  <buttongroup name="buttonGroup_18"/>
-  <buttongroup name="buttonGroup_13"/>
-  <buttongroup name="buttonGroup_15"/>
-  <buttongroup name="buttonGroup_19"/>
   <buttongroup name="buttonGroup_9"/>
-  <buttongroup name="buttonGroup_2"/>
+  <buttongroup name="buttonGroup_12"/>
+  <buttongroup name="buttonGroup_4"/>
+  <buttongroup name="buttonGroup_6"/>
+  <buttongroup name="buttonGroup_5"/>
+  <buttongroup name="buttonGroup_3"/>
+  <buttongroup name="buttonGroup_15"/>
+  <buttongroup name="buttonGroup_7"/>
+  <buttongroup name="buttonGroup_19"/>
+  <buttongroup name="buttonGroup_18"/>
+  <buttongroup name="buttonGroup_14"/>
+  <buttongroup name="buttonGroup_8"/>
   <buttongroup name="buttonGroup"/>
+  <buttongroup name="buttonGroup_11"/>
+  <buttongroup name="buttonGroup_17"/>
+  <buttongroup name="buttonGroup_2"/>
+  <buttongroup name="buttonGroup_13"/>
+  <buttongroup name="buttonGroup_10"/>
+  <buttongroup name="buttonGroup_16"/>
  </buttongroups>
 </ui>
