--- a/GUI/Design.ui
+++ b/GUI/Design.ui
@@ -303,28 +303,6 @@ Interpol. Alg.:</string>
           </property>
          </widget>
         </item>
-        <item row="3" column="2">
-         <widget class="QRadioButton" name="use_current_images">
-          <property name="text">
-           <string>a) Use Selected Images 
-(if still not converted
- it will be done now)</string>
-          </property>
-          <property name="checked">
-           <bool>false</bool>
-          </property>
-          <attribute name="buttonGroup">
-           <string notr="true">buttonGroup_10</string>
-          </attribute>
-         </widget>
-        </item>
-        <item row="3" column="4">
-         <widget class="QLineEdit" name="referenceAngleTest">
-          <property name="text">
-           <string>1e-11</string>
-          </property>
-         </widget>
-        </item>
         <item row="4" column="1">
          <widget class="QRadioButton" name="show_plots">
           <property name="enabled">
@@ -1023,7 +1001,7 @@ Precision:</string>
                 <item row="1" column="2">
                  <widget class="QLineEdit" name="precision_quad_rad">
                   <property name="text">
-                   <string>0.01</string>
+                   <string>0.0001</string>
                   </property>
                  </widget>
                 </item>
@@ -1100,7 +1078,7 @@ Precision:</string>
                 <item row="1" column="3">
                  <widget class="QLineEdit" name="precision_fib_rad">
                   <property name="text">
-                   <string>0.01</string>
+                   <string>0.0001</string>
                   </property>
                  </widget>
                 </item>
@@ -1243,7 +1221,7 @@ Precision:</string>
                <string>Fibonacci 3 point search</string>
               </property>
               <property name="checked">
-               <bool>false</bool>
+               <bool>true</bool>
               </property>
               <attribute name="buttonGroup">
                <string notr="true">buttonGroup_2</string>
@@ -1256,7 +1234,7 @@ Precision:</string>
                <string>Quadratic Fit 3 point search</string>
               </property>
               <property name="checked">
-               <bool>true</bool>
+               <bool>false</bool>
               </property>
               <attribute name="buttonGroup">
                <string notr="true">buttonGroup_2</string>
@@ -1295,7 +1273,7 @@ R, M Angle (rad):</string>
             <item row="0" column="0">
              <widget class="QTabWidget" name="tabWidget_5">
               <property name="currentIndex">
-               <number>2</number>
+               <number>1</number>
               </property>
               <property name="tabBarAutoHide">
                <bool>true</bool>
@@ -1991,7 +1969,42 @@ R, M Angle (rad):</string>
           </property>
          </widget>
         </item>
-        <item row="3" column="3">
+        <item row="4" column="2">
+         <widget class="QLabel" name="label_107">
+          <property name="text">
+           <string>Last result units:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="3">
+         <widget class="QComboBox" name="last_unit">
+          <item>
+           <property name="text">
+            <string>rad</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>deg</string>
+           </property>
+          </item>
+         </widget>
+        </item>
+        <item row="4" column="4">
+         <widget class="QRadioButton" name="use_converted_iX">
+          <property name="text">
+           <string>b) Use Images already
+converted. They will be searched in &quot;./iX&quot;.</string>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
+          <attribute name="buttonGroup">
+           <string notr="true">buttonGroup_10</string>
+          </attribute>
+         </widget>
+        </item>
+        <item row="3" column="2">
          <widget class="QLabel" name="label_106">
           <property name="font">
            <font>
@@ -2004,14 +2017,21 @@ for tests (rad):</string>
           </property>
          </widget>
         </item>
-        <item row="4" column="2" colspan="3">
-         <widget class="QRadioButton" name="use_converted_iX">
+        <item row="3" column="3">
+         <widget class="QLineEdit" name="referenceAngleTest">
           <property name="text">
-           <string>b) Use Images already converted in the format specified in the first tab. 
-They will be searched in &quot;./iX&quot;. Note the Reference folder inside it.</string>
+           <string>1e-11</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="4">
+         <widget class="QRadioButton" name="use_current_images">
+          <property name="text">
+           <string>a) Use Selected Images 
+(if still not converted it will be done now)</string>
           </property>
           <property name="checked">
-           <bool>true</bool>
+           <bool>false</bool>
           </property>
           <attribute name="buttonGroup">
            <string notr="true">buttonGroup_10</string>
@@ -2359,7 +2379,39 @@ Max (728x542)</string>
             <string>Life Take Settings</string>
            </attribute>
            <layout class="QGridLayout" name="gridLayout_10">
-            <item row="0" column="2">
+            <item row="0" column="1">
+             <widget class="QLineEdit" name="referenceAngle">
+              <property name="text">
+               <string>0</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="0">
+             <widget class="QLabel" name="label_28">
+              <property name="text">
+               <string>Process Images
+In chunks of:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="1">
+             <widget class="QLineEdit" name="imagesInChunks">
+              <property name="text">
+               <string>2</string>
+              </property>
+             </widget>
+            </item>
+            <item row="3" column="2">
+             <widget class="QRadioButton" name="showNothing">
+              <property name="text">
+               <string>Show Nothing</string>
+              </property>
+              <attribute name="buttonGroup">
+               <string notr="true">buttonGroup_14</string>
+              </attribute>
+             </widget>
+            </item>
+            <item row="3" column="3" colspan="2">
              <widget class="QRadioButton" name="showContinously">
               <property name="text">
                <string>Show Continously</string>
@@ -2372,144 +2424,17 @@ Max (728x542)</string>
               </attribute>
              </widget>
             </item>
-            <item row="8" column="2" colspan="3">
-             <widget class="QProgressBar" name="progressBar_Life">
-              <property name="value">
-               <number>0</number>
-              </property>
-             </widget>
-            </item>
-            <item row="0" column="1">
-             <widget class="QLineEdit" name="referenceAngle">
-              <property name="text">
-               <string>0</string>
-              </property>
-             </widget>
-            </item>
-            <item row="8" column="1">
-             <widget class="QLineEdit" name="outputEvery">
-              <property name="text">
-               <string>1</string>
-              </property>
-             </widget>
-            </item>
-            <item row="8" column="0">
+            <item row="5" column="0">
              <widget class="QLabel" name="label_25">
               <property name="text">
                <string>Save Outputs Every (chunks):</string>
               </property>
              </widget>
             </item>
-            <item row="4" column="0">
-             <widget class="QRadioButton" name="saveLifeOutput">
+            <item row="5" column="1">
+             <widget class="QLineEdit" name="outputEvery">
               <property name="text">
-               <string>Save Outputs</string>
-              </property>
-              <property name="checked">
-               <bool>true</bool>
-              </property>
-              <attribute name="buttonGroup">
-               <string notr="true">buttonGroup_13</string>
-              </attribute>
-             </widget>
-            </item>
-            <item row="4" column="1">
-             <widget class="QRadioButton" name="dont_SaveLifeOutput">
-              <property name="text">
-               <string>Do not Save Outputs</string>
-              </property>
-              <property name="checked">
-               <bool>false</bool>
-              </property>
-              <attribute name="buttonGroup">
-               <string notr="true">buttonGroup_13</string>
-              </attribute>
-             </widget>
-            </item>
-            <item row="4" column="2">
-             <widget class="QLabel" name="label_30">
-              <property name="text">
-               <string>Show each frame
- for (ms):</string>
-              </property>
-             </widget>
-            </item>
-            <item row="4" column="3">
-             <widget class="QLineEdit" name="frame_previs_ms">
-              <property name="text">
-               <string>100</string>
-              </property>
-             </widget>
-            </item>
-            <item row="0" column="0">
-             <widget class="QLabel" name="label_29">
-              <property name="text">
-               <string>Set Angle to Consider
-for the Reference (rad):</string>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="2">
-             <widget class="QRadioButton" name="showOnlyOutputted">
-              <property name="enabled">
-               <bool>false</bool>
-              </property>
-              <property name="text">
-               <string>Show Only Outputted</string>
-              </property>
-              <attribute name="buttonGroup">
-               <string notr="true">buttonGroup_14</string>
-              </attribute>
-             </widget>
-            </item>
-            <item row="2" column="2">
-             <widget class="QRadioButton" name="showNothing">
-              <property name="text">
-               <string>Show Nothing</string>
-              </property>
-              <attribute name="buttonGroup">
-               <string notr="true">buttonGroup_14</string>
-              </attribute>
-             </widget>
-            </item>
-            <item row="1" column="3">
-             <widget class="QRadioButton" name="showImagesAngles">
-              <property name="text">
-               <string>Plot only Images and angle</string>
-              </property>
-              <property name="checked">
-               <bool>true</bool>
-              </property>
-              <attribute name="buttonGroup">
-               <string notr="true">buttonGroup_15</string>
-              </attribute>
-             </widget>
-            </item>
-            <item row="2" column="3">
-             <widget class="QRadioButton" name="showAll">
-              <property name="enabled">
-               <bool>false</bool>
-              </property>
-              <property name="text">
-               <string>Plot all results</string>
-              </property>
-              <attribute name="buttonGroup">
-               <string notr="true">buttonGroup_15</string>
-              </attribute>
-             </widget>
-            </item>
-            <item row="1" column="1">
-             <widget class="QLineEdit" name="imagesInChunks">
-              <property name="text">
-               <string>2</string>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="0">
-             <widget class="QLabel" name="label_28">
-              <property name="text">
-               <string>Process Images
-In chunks of:</string>
+               <string>1</string>
               </property>
              </widget>
             </item>
@@ -2526,6 +2451,121 @@ In chunks of:</string>
               <property name="text">
                <string>8</string>
               </property>
+             </widget>
+            </item>
+            <item row="3" column="0">
+             <widget class="QRadioButton" name="saveLifeOutput">
+              <property name="text">
+               <string>Save Outputs</string>
+              </property>
+              <property name="checked">
+               <bool>true</bool>
+              </property>
+              <attribute name="buttonGroup">
+               <string notr="true">buttonGroup_13</string>
+              </attribute>
+             </widget>
+            </item>
+            <item row="3" column="1">
+             <widget class="QRadioButton" name="dont_SaveLifeOutput">
+              <property name="text">
+               <string>Do not Save Outputs</string>
+              </property>
+              <property name="checked">
+               <bool>false</bool>
+              </property>
+              <attribute name="buttonGroup">
+               <string notr="true">buttonGroup_13</string>
+              </attribute>
+             </widget>
+            </item>
+            <item row="0" column="0">
+             <widget class="QLabel" name="label_29">
+              <property name="text">
+               <string>Set Angle to Consider
+for the Reference (rad):</string>
+              </property>
+             </widget>
+            </item>
+            <item row="3" column="5">
+             <widget class="QRadioButton" name="showOnlyOutputted">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+              <property name="text">
+               <string>Show Only Outputted</string>
+              </property>
+              <attribute name="buttonGroup">
+               <string notr="true">buttonGroup_14</string>
+              </attribute>
+             </widget>
+            </item>
+            <item row="2" column="5">
+             <widget class="QLineEdit" name="frame_previs_ms">
+              <property name="text">
+               <string>100</string>
+              </property>
+             </widget>
+            </item>
+            <item row="2" column="4">
+             <widget class="QLabel" name="label_30">
+              <property name="text">
+               <string>Show each frame for (ms):</string>
+              </property>
+             </widget>
+            </item>
+            <item row="5" column="4" colspan="2">
+             <widget class="QProgressBar" name="progressBar_Life">
+              <property name="value">
+               <number>0</number>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="5">
+             <widget class="QComboBox" name="last_unit_live">
+              <item>
+               <property name="text">
+                <string>rad</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>deg</string>
+               </property>
+              </item>
+             </widget>
+            </item>
+            <item row="0" column="4">
+             <widget class="QLabel" name="label_108">
+              <property name="text">
+               <string>Last result units:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="5">
+             <widget class="QRadioButton" name="showImagesAngles">
+              <property name="text">
+               <string>Plot only Images and angle</string>
+              </property>
+              <property name="checked">
+               <bool>true</bool>
+              </property>
+              <attribute name="buttonGroup">
+               <string notr="true">buttonGroup_15</string>
+              </attribute>
+             </widget>
+            </item>
+            <item row="1" column="4">
+             <widget class="QRadioButton" name="showAll">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+              <property name="text">
+               <string>Plot all results</string>
+              </property>
+              <attribute name="buttonGroup">
+               <string notr="true">buttonGroup_15</string>
+              </attribute>
              </widget>
             </item>
            </layout>
