--- a/GUI/Design.ui
+++ b/GUI/Design.ui
@@ -72,7 +72,7 @@ Quit shortcut: CTRL+Q</string>
        </sizepolicy>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -337,7 +337,7 @@ Interpol. Alg.:</string>
            </size>
           </property>
           <property name="currentIndex">
-           <number>4</number>
+           <number>5</number>
           </property>
           <widget class="QWidget" name="tab_3">
            <attribute name="title">
@@ -1273,7 +1273,7 @@ R, M Angle (rad):</string>
             <item row="0" column="0">
              <widget class="QTabWidget" name="tabWidget_5">
               <property name="currentIndex">
-               <number>1</number>
+               <number>0</number>
               </property>
               <property name="tabBarAutoHide">
                <bool>true</bool>
@@ -1377,7 +1377,7 @@ R, M Angle (rad):</string>
                 <item row="3" column="9">
                  <widget class="QLineEdit" name="yChunks_S">
                   <property name="text">
-                   <string>300</string>
+                   <string>1215</string>
                   </property>
                  </widget>
                 </item>
@@ -1447,7 +1447,7 @@ R, M Angle (rad):</string>
                 <item row="1" column="9">
                  <widget class="QLineEdit" name="xChunks_S">
                   <property name="text">
-                   <string>300</string>
+                   <string>1215</string>
                   </property>
                  </widget>
                 </item>
@@ -1833,7 +1833,7 @@ R, M Angle (rad):</string>
                 <item row="3" column="5">
                  <widget class="QLineEdit" name="max_pt_Z_SC">
                   <property name="text">
-                   <string>15</string>
+                   <string>5</string>
                   </property>
                  </widget>
                 </item>
@@ -1917,7 +1917,7 @@ R, M Angle (rad):</string>
                    <string>Use Gradient Alg. for initial guess</string>
                   </property>
                   <property name="checked">
-                   <bool>true</bool>
+                   <bool>false</bool>
                   </property>
                  </widget>
                 </item>
@@ -2201,7 +2201,7 @@ for tests (rad):</string>
            <bool>true</bool>
           </property>
           <property name="currentIndex">
-           <number>2</number>
+           <number>0</number>
           </property>
           <widget class="QWidget" name="tab_8">
            <attribute name="title">
@@ -2917,24 +2917,24 @@ Jones Vector (note i is 1j).:</string>
  <resources/>
  <connections/>
  <buttongroups>
-  <buttongroup name="buttonGroup_11"/>
-  <buttongroup name="buttonGroup_5"/>
-  <buttongroup name="buttonGroup_15"/>
-  <buttongroup name="buttonGroup_9"/>
-  <buttongroup name="buttonGroup_13"/>
-  <buttongroup name="buttonGroup_8"/>
-  <buttongroup name="buttonGroup_10"/>
-  <buttongroup name="buttonGroup_2"/>
-  <buttongroup name="buttonGroup_12"/>
-  <buttongroup name="buttonGroup_16"/>
-  <buttongroup name="buttonGroup_6"/>
-  <buttongroup name="buttonGroup_7"/>
-  <buttongroup name="buttonGroup_17"/>
-  <buttongroup name="buttonGroup_3"/>
-  <buttongroup name="buttonGroup_19"/>
   <buttongroup name="buttonGroup"/>
-  <buttongroup name="buttonGroup_14"/>
   <buttongroup name="buttonGroup_18"/>
+  <buttongroup name="buttonGroup_8"/>
+  <buttongroup name="buttonGroup_3"/>
+  <buttongroup name="buttonGroup_5"/>
+  <buttongroup name="buttonGroup_6"/>
+  <buttongroup name="buttonGroup_12"/>
+  <buttongroup name="buttonGroup_13"/>
+  <buttongroup name="buttonGroup_11"/>
+  <buttongroup name="buttonGroup_7"/>
+  <buttongroup name="buttonGroup_2"/>
+  <buttongroup name="buttonGroup_17"/>
+  <buttongroup name="buttonGroup_19"/>
   <buttongroup name="buttonGroup_4"/>
+  <buttongroup name="buttonGroup_9"/>
+  <buttongroup name="buttonGroup_14"/>
+  <buttongroup name="buttonGroup_10"/>
+  <buttongroup name="buttonGroup_16"/>
+  <buttongroup name="buttonGroup_15"/>
  </buttongroups>
 </ui>
