--- a/GUI/Design.ui
+++ b/GUI/Design.ui
@@ -183,7 +183,7 @@ Quit shortcut: CTRL+Q</string>
         <item row="5" column="4">
          <widget class="QLineEdit" name="iX">
           <property name="text">
-           <string>607</string>
+           <string>550</string>
           </property>
          </widget>
         </item>
@@ -1273,7 +1273,7 @@ R, M Angle (rad):</string>
             <item row="0" column="0">
              <widget class="QTabWidget" name="tabWidget_5">
               <property name="currentIndex">
-               <number>0</number>
+               <number>3</number>
               </property>
               <property name="tabBarAutoHide">
                <bool>true</bool>
@@ -1424,7 +1424,7 @@ R, M Angle (rad):</string>
                 <item row="8" column="3">
                  <widget class="QLineEdit" name="numK_S">
                   <property name="text">
-                   <string>1000</string>
+                   <string>1200</string>
                   </property>
                  </widget>
                 </item>
@@ -1749,7 +1749,7 @@ R, M Angle (rad):</string>
                 <item row="3" column="5">
                  <widget class="QLineEdit" name="min_R0_mag_S">
                   <property name="enabled">
-                   <bool>false</bool>
+                   <bool>true</bool>
                   </property>
                   <property name="text">
                    <string>1.5</string>
@@ -1759,10 +1759,10 @@ R, M Angle (rad):</string>
                 <item row="4" column="5">
                  <widget class="QLineEdit" name="max_R0_mag_S">
                   <property name="enabled">
-                   <bool>false</bool>
+                   <bool>true</bool>
                   </property>
                   <property name="text">
-                   <string>40.0</string>
+                   <string>35.0</string>
                   </property>
                  </widget>
                 </item>
@@ -1777,6 +1777,9 @@ R, M Angle (rad):</string>
                  <widget class="QRadioButton" name="fibonacci_SC">
                   <property name="text">
                    <string>Use Fibonacci Ratio Search</string>
+                  </property>
+                  <property name="checked">
+                   <bool>true</bool>
                   </property>
                   <attribute name="buttonGroup">
                    <string notr="true">buttonGroup_18</string>
@@ -1915,7 +1918,7 @@ cycles:</string>
                    <string>Use Quadratic Fit Search</string>
                   </property>
                   <property name="checked">
-                   <bool>true</bool>
+                   <bool>false</bool>
                   </property>
                   <attribute name="buttonGroup">
                    <string notr="true">buttonGroup_18</string>
@@ -1974,7 +1977,7 @@ cycles:</string>
                 <item row="4" column="5">
                  <widget class="QLineEdit" name="max_pt_Z_SC">
                   <property name="text">
-                   <string>5</string>
+                   <string>0</string>
                   </property>
                  </widget>
                 </item>
@@ -2988,24 +2991,24 @@ Jones Vector (note i is 1j).:</string>
  <resources/>
  <connections/>
  <buttongroups>
-  <buttongroup name="buttonGroup_2"/>
-  <buttongroup name="buttonGroup_4"/>
-  <buttongroup name="buttonGroup_6"/>
-  <buttongroup name="buttonGroup"/>
-  <buttongroup name="buttonGroup_14"/>
-  <buttongroup name="buttonGroup_11"/>
-  <buttongroup name="buttonGroup_9"/>
-  <buttongroup name="buttonGroup_18"/>
-  <buttongroup name="buttonGroup_7"/>
-  <buttongroup name="buttonGroup_17"/>
-  <buttongroup name="buttonGroup_10"/>
   <buttongroup name="buttonGroup_12"/>
-  <buttongroup name="buttonGroup_13"/>
-  <buttongroup name="buttonGroup_3"/>
   <buttongroup name="buttonGroup_16"/>
   <buttongroup name="buttonGroup_8"/>
+  <buttongroup name="buttonGroup_2"/>
+  <buttongroup name="buttonGroup_17"/>
+  <buttongroup name="buttonGroup_18"/>
+  <buttongroup name="buttonGroup_3"/>
+  <buttongroup name="buttonGroup_14"/>
+  <buttongroup name="buttonGroup_6"/>
+  <buttongroup name="buttonGroup"/>
+  <buttongroup name="buttonGroup_4"/>
   <buttongroup name="buttonGroup_5"/>
-  <buttongroup name="buttonGroup_19"/>
   <buttongroup name="buttonGroup_15"/>
+  <buttongroup name="buttonGroup_10"/>
+  <buttongroup name="buttonGroup_19"/>
+  <buttongroup name="buttonGroup_7"/>
+  <buttongroup name="buttonGroup_9"/>
+  <buttongroup name="buttonGroup_13"/>
+  <buttongroup name="buttonGroup_11"/>
  </buttongroups>
 </ui>
